--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,6 +1,11 @@
 name: Lint Commits
 on: [pull_request]
 
+# Permission so that github action can checkout
+permissions:
+    contents: read
+    pull-requests: read
+
 jobs:
     commitlint:
         runs-on: ubuntu-latest
