fix(ci): add permissions to merge restriction workflow

--- a/.github/workflows/restrict-merge.yml
+++ b/.github/workflows/restrict-merge.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
 
+permissions:
+  statuses: write
+  pull-requests: read
+
 jobs:
   enforce-merge-restriction:
     runs-on: ubuntu-latest
