--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       context: .
       dockerfile: Dockerfile.airflow
     container_name: algoflow_airflow
+    depends_on:
+      - postgres
     environment:
       - AIRFLOW__CORE__LOAD_EXAMPLES=false
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
@@ -66,6 +68,7 @@ services:
       - _AIRFLOW_WWW_USER_EMAIL=admin@example.com
       - _AIRFLOW_WWW_USER_FIRSTNAME=Admin
       - _AIRFLOW_WWW_USER_LASTNAME=User
+      - DATABASE_URL=postgresql://postgres:postgres@algoflow_sec_master_postgres:5432/sec_master_dev
     volumes:
       - ./dags:/opt/airflow/dags
       - ./sec_data_pipeline:/opt/airflow/plugins/sec_data_pipeline
