--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - postgres
     environment:
       - AIRFLOW__CORE__LOAD_EXAMPLES=false
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgres:postgres@postgres:5432/airflow
       - _AIRFLOW_DB_MIGRATE=true
       - _AIRFLOW_WWW_USER_CREATE=true
       - _AIRFLOW_WWW_USER_USERNAME=admin
@@ -83,15 +83,36 @@ services:
     command:
       - -c
       - |
-        airflow db init &&
+        # Wait for postgres to be ready
+        echo "Waiting for PostgreSQL..."
+        until PGPASSWORD=postgres psql -h postgres -U postgres -c '\q' 2>/dev/null; do
+          sleep 2
+        done
+
+        # Create airflow database if it doesn't exist
+        echo "Creating airflow database if needed..."
+        PGPASSWORD=postgres psql -h postgres -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'airflow'" | grep -q 1 || \
+        PGPASSWORD=postgres psql -h postgres -U postgres -c "CREATE DATABASE airflow"
+
+        echo "Initializing Airflow database..."
+        airflow db init
+
+        echo "Creating admin user..."
         airflow users create \
           --username admin \
           --password admin \
           --firstname Admin \
           --lastname User \
           --role Admin \
-          --email admin@example.com || true &&
-        exec airflow standalone
+          --email admin@example.com || true
+
+        echo "Starting Airflow webserver and scheduler..."
+        # Remove any stale pid files
+        rm -f /opt/airflow/airflow-webserver.pid
+        rm -f /opt/airflow/airflow-scheduler.pid
+
+        airflow webserver --host 0.0.0.0 --port 8080 &
+        airflow scheduler
     restart: unless-stopped
 
 volumes:
