--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,6 +1,24 @@
 {
     "extends": ["@commitlint/config-conventional"],
     "rules": {
-      "header-max-length": [2, "always", 140]
+      "header-max-length": [2, "always", 140],
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "bump",
+          "chore",
+          "ci",
+          "docs",
+          "feat",
+          "fix",
+          "perf",
+          "refactor",
+          "revert",
+          "style",
+          "test"
+        ]
+      ]
     }
 }
