--- a/.github/workflows/auto-version-bump.yml
+++ b/.github/workflows/auto-version-bump.yml
@@ -18,43 +18,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout main branch with full history
+      # Step 1: Checkout main branch with full history (admin PAT bypasses protection)
       - name: Checkout main
         uses: actions/checkout@v3
         with:
           ref: main
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.VERSION_BUMP_TOKEN }}
 
-      # Step 2: Configure git
+      # Step 3: Configure git
       - name: Configure Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "algoflow-bot[bot]"
+          git config --global user.email "algoflow-bot[bot]@users.noreply.github.com"
 
-      # Step 3: Install Python
+      # Step 4: Install Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 4: Install commitizen
+      # Step 5: Install commitizen
       - name: Install commitizen
         run: pip install commitizen
 
-      # Step 5: Run cz bump (auto-detects version from commits)
+      # Step 6: Run cz bump (auto-detects version from commits)
       - name: Bump version with commitizen
         run: |
           cz bump --yes --changelog
         env:
           SKIP_PRE_COMMIT: 1
 
-      # Step 6: Push changes to main
+      # Step 7: Push changes to main
       - name: Push changes to main
         run: |
           git push origin main --follow-tags
 
-      # Step 7: Merge main back to dev to sync version
+      # Step 8: Merge main back to dev to sync version
       - name: Sync version back to dev
         run: |
           git fetch origin dev:dev
