--- a/.github/workflows/auto-version-bump.yml
+++ b/.github/workflows/auto-version-bump.yml
@@ -52,7 +52,8 @@ jobs:
       # Step 7: Push changes to main
       - name: Push changes to main
         run: |
-          git push origin main --follow-tags
+          git push origin main
+          git push origin --tags
 
       # Step 8: Merge main back to dev to sync version
       - name: Sync version back to dev
