--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
-mkdocs==1.5.3
-mkdocs-material==9.5.3
-mkdocstrings[python]==0.24.0
-pymdown-extensions==10.7
+mkdocs==1.6.1
+mkdocs-material==9.5.47
+mkdocstrings[python]==0.27.0
+mkdocs-autorefs==1.2.0
+pymdown-extensions==10.12
