fix(docs): add Python path for mkdocstrings and fix broken link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
+          paths: [data_pipeline]
           options:
             docstring_style: google
             show_source: true
