--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,8 +32,18 @@ plugins:
 
 markdown_extensions:
   - pymdownx.highlight
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - admonition
+  - pymdownx.details
   - tables
+  - attr_list
+  - md_in_html
 
 nav:
   - Home: index.md
