docs: completed data pipeline docs and refactor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,3 +57,4 @@ nav:
           - Validation: data_pipeline/components/validation.md
           - YfinancePipeline: data_pipeline/components/yfinance_pipeline.md
           - YfinanceClient: data_pipeline/components/yfinance_client.md
+  - Contributing: CONTRIBUTING.md
