feat: configured teams and projects

--- a/infrastructure/supabase/docker-compose.yml
+++ b/infrastructure/supabase/docker-compose.yml
@@ -238,7 +238,7 @@ services:
     image: supabase/storage-api:v1.28.0
     restart: unless-stopped
     volumes:
-      - ./volumes/storage:/var/lib/storage:z
+      - storage-data:/var/lib/storage:z
     healthcheck:
       test:
         [
@@ -281,7 +281,7 @@ services:
     image: darthsim/imgproxy:v3.8.0
     restart: unless-stopped
     volumes:
-      - ./volumes/storage:/var/lib/storage:z
+      - storage-data:/var/lib/storage:z
     healthcheck:
       test:
         [
@@ -322,7 +322,7 @@ services:
     image: supabase/edge-runtime:v1.69.6
     restart: unless-stopped
     volumes:
-      - ./volumes/functions:/home/deno/functions:Z
+      - functions-data:/home/deno/functions:Z
     depends_on:
       analytics:
         condition: service_healthy
@@ -403,7 +403,7 @@ services:
       # Initialize the database settings with JWT_SECRET and JWT_EXP
       - ./volumes/db/jwt.sql:/docker-entrypoint-initdb.d/init-scripts/99-jwt.sql:Z
       # PGDATA directory is persisted between restarts
-      - ./volumes/db/data:/var/lib/postgresql/data:Z
+      - db-data:/var/lib/postgresql/data:Z
       # Changes required for internal supabase data such as _analytics
       - ./volumes/db/_supabase.sql:/docker-entrypoint-initdb.d/migrations/97-_supabase.sql:Z
       # Changes required for Analytics support
@@ -544,3 +544,6 @@ services:
 
 volumes:
   db-config:
+  db-data:
+  storage-data:
+  functions-data:
