--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@datalayer/icons-react": "^1.0.6",
+    "@datalayer/jupyter-react": "^1.1.7",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@monaco-editor/react": "^4.7.0",
+    "@primer/react": "^37.31.0",
+    "@primer/react-brand": "^0.58.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -33,22 +37,28 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tabler/icons-react": "^3.35.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-table": "^8.21.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "golden-layout": "^2.6.0",
     "lucide-react": "^0.545.0",
+    "monaco-editor": "^0.54.0",
     "monaco-themes": "^0.4.7",
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-is": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "y-monaco": "^0.1.6",
@@ -63,8 +73,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-is": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "postcss-import": "^16.1.1",
+    "postcss-import-alias": "^0.0.1",
+    "string-replace-loader": "^3.2.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
