--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -4,6 +4,7 @@
 include:
   - docker-compose.supabase.yml      # Supabase auth, DB, storage
   - docker-compose.data-pipeline.yml
+  - docker-compose.jupyter.yml       # Jupyter notebook server
   # - docker-compose.api.yml          # Uncomment when API is ready
   # - docker-compose.worker.yml       # Uncomment when worker is ready
   # - docker-compose.observability.yml # Uncomment if you want observability
