--- a/infrastructure/supabase/docker-compose.yml
+++ b/infrastructure/supabase/docker-compose.yml
@@ -74,6 +74,9 @@ services:
       KONG_PLUGINS: request-transformer,cors,key-auth,acl,basic-auth
       KONG_NGINX_PROXY_PROXY_BUFFER_SIZE: 160k
       KONG_NGINX_PROXY_PROXY_BUFFERS: 64 160k
+      # Fix for WebSocket 431 error - increase client header buffer size
+      KONG_NGINX_HTTP_CLIENT_HEADER_BUFFER_SIZE: 64k
+      KONG_NGINX_HTTP_LARGE_CLIENT_HEADER_BUFFERS: 16 64k
       SUPABASE_ANON_KEY: ${ANON_KEY}
       SUPABASE_SERVICE_KEY: ${SERVICE_ROLE_KEY}
       DASHBOARD_USERNAME: ${DASHBOARD_USERNAME}
